[gd_scene load_steps=7 format=2]

[ext_resource path="res://tanks/Tank.gd" type="Script" id=1]
[ext_resource path="res://assets/Spritesheet/onlyObjects_retina_rotated.png" type="Texture" id=2]
[ext_resource path="res://effects/Explosion.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.9902, 19.0651 )

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 0.1
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Turret/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0392235, 0.098134 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Turret/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.0115717, -0.00255479, 0, 0.0177332, 0.0568065 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 1 ), Vector2( 0.5, 1 ), Vector2( 0.6, 1 ), Vector2( 1, 1 ), Vector2( 0.25, 0.8 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "init"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Turret/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0392235, 0.098134 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Turret/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.0115717, -0.00255479, 0, 0.0177332, 0.0568065 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 1 ), Vector2( 0.5, 1 ), Vector2( 0.6, 1 ), Vector2( 1, 1 ), Vector2( 0.25, 0.8 ) ]
}

[node name="Tank" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="GunTimer" type="Timer" parent="."]

[node name="body" type="Sprite" parent="."]
scale = Vector2( 1.02506, 0.72962 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 84, 264, 80, 81 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.02487, 1.19865 )
shape = SubResource( 1 )

[node name="Turret" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 25, 0 )
region_enabled = true
region_rect = Rect2( 1, 14, 58, 22 )

[node name="Muzzle" type="Position2D" parent="Turret"]
position = Vector2( 61.6416, 0 )
scale = Vector2( 0.559999, 1 )

[node name="Sprite" type="Sprite" parent="Turret"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 57.6013, -0.644276 )
scale = Vector2( 0.25, 0.8 )
texture = ExtResource( 2 )
offset = Vector2( 25, 0 )
region_enabled = true
region_rect = Rect2( 645, 94, 49, 40 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
playback_speed = 0.35
"anims/New Anim" = SubResource( 2 )
anims/init = SubResource( 3 )

[node name="Explosion" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
